package ru.mimoun.computer_shop.model;

public enum ProductType {
    PC,
    LAPTOP,
    MONITOR,
    HARD_DISK
}
